# trashcan

./: README.md
packer_win/: .gitmodules  packer_win.sln
packer_win/packer_test/: main.cpp  packer_test.vcxproj
packer_win/packer_win/: api_32.txt  api_64.txt  getopt.c  getopt.h  loader_32.asm  loader_64.asm  main.cpp  packer_win.vcxproj  packer_win.vcxproj.filters  pe.inc  pefile.cpp  pefile.h  pepacker.cpp  pepacker.h  polyengine.cpp  polyengine.h  utils.h
riscv-emu/: CMakeLists.txt  test  test.s
riscv-emu/boot/: Makefile  boot.ld  boot.s  test.s
riscv-emu/src/: CMakeLists.txt  main.cpp  rv_cpu.cpp  rv_cpu.hpp  rv_device.cpp  rv_device.hpp  rv_exceptions.hpp  rv_machine.cpp  rv_machine.hpp  rv_memory.cpp  rv_memory.hpp  testrv
riscv-emu/src/devices/: rv_clint.cpp  rv_plic.cpp  rv_plic.hpp  rv_uart.cpp  rv_uart.hpp
xarfcn_scan/: CMakeLists.txt  alignedallocator.hpp  arrayview.hpp  gsmband.cpp  gsmband.hpp  literals.hpp  main.cpp  types.hpp  windowfunction.hpp  xarfcnscanner.cpp  xarfcnscanner.hpp
